# dicerollgen

./: Cargo.toml  LICENSE  README.md
dice/: dice.py  more_dice.py
src/: cli.rs  main.rs
